--- a/BookStore/Views/Shared/BookHeader.cshtml
+++ b/BookStore/Views/Shared/BookHeader.cshtml
@@ -34,9 +34,9 @@
                 @*<p class="glyphicon glyphicon-star rate" aria-hidden="true">@Model.Rating</p>*@
 
             </div>
-            <div class="like-rate">
-                <p class="price">@Model.Price.ToString("c")</p>
-            </div>
+            @*<div class="like-rate">
+                <p class="price">@Model.BookDetail.Price.ToString("c")</p>
+            </div>*@
         </div>
 
     </div>
