--- a/BookStore/Views/Admin/Create.cshtml
+++ b/BookStore/Views/Admin/Create.cshtml
@@ -17,9 +17,11 @@
     </label>
     @Html.EditorFor(b => b.BookAuthors, new { @class = "single-line" })
     <label>
-        <span>@Html.ActionLink("Назад", "Index", new { @class = "button" })</span>
-        <input type="submit" class="button" value="Сохранить" />
+        <span>@Html.ActionLink("Назад", "Index", new {@class = "button"})</span>
+        <input type="submit" class="button" value="Сохранить"/>
     </label>
+    @Html.HiddenFor(x=>x.Book_ID)
+    @Html.HiddenFor(x=>x.BookDetail)
 }
 
 
