--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -10,7 +10,7 @@
             <h2>Edit</h2>
             @using (Html.BeginForm())
             {
-                @Html.EditorFor(b => b.Book_ID)
+                @Html.HiddenFor(b => b.Book_ID)
                 <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
                 <div id="Authors">
@@ -18,35 +18,35 @@
                     @Html.EditorFor(b => b.BookAuthors, new { @class = "single-line" })
                 </div>
                 <div class="editor-label">
-                    @Html.LabelFor(b => b.Genres, new { @class = "single-line" })
+                    @Html.LabelFor(b => b.BookDetail.Genres, new { @class = "single-line" })
                     <a href="#" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return addField('Genre')"></a>
                 </div>
                 <div id="Genres">
-                    @Html.EditorFor(b => b.Genres, new { @class = "single-line" })
+                    @Html.EditorFor(b => b.BookDetail.Genres, new { @class = "single-line" })
                 </div>
                 <div class="editor-label">
                     @Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin",
                         new {title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, bookId = @Model.Book_ID},
                         new AjaxOptions {UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST"})
                 </div>
-                <div class="editor-field">@Html.TextAreaFor(b => b.Annotation, new { @class = "text-box multi-line", id = "AreaText" })</div>
+                <div class="editor-field">@Html.TextAreaFor(b => b.BookDetail.Annotation, new { @class = "text-box multi-line", id = "AreaText" })</div>
                 <div class="editor-label">
                     @Ajax.ActionLink("Search Image", "FindImage", "Admin",
                   new { title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, Id = @Model.Book_ID },
                 new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
                 </div>
                 <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
-                <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line", type = "number", step = "any" })</div>
+                <div class="editor-label">@Html.LabelFor(b => b.BookDetail.Price, new { @class = "single-line" })</div>
+                <div class="editor-field">@Html.EditorFor(b => b.BookDetail.Price, new { @class = "single-line", type = "number", step = "any" })</div>
                 <div class="editor-label">
-                    @Html.LabelFor(b => b.Tages, new { @class = "single-line" })
+                    @Html.LabelFor(b => b.BookDetail.Tages, new { @class = "single-line" })
                     <a href="#" id="addField" class="glyphicon glyphicon-plus" aria-hidden="true" onclick=" return addField('Tag') "></a>
                 </div>
                 <div class="editor-field" id="Tags">
-                    @Html.EditorFor(t => t.Tages, new { @class = "single-line" })
+                    @Html.EditorFor(t => t.BookDetail.Tages, new { @class = "single-line" })
                 </div>
-                <div class="editor-label">@Html.LabelFor(b => b.ContentUrl, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.EditorFor(b => b.ContentUrl, new { @class = "single-line" })</div>
+                <div class="editor-label">@Html.LabelFor(b => b.BookDetail.ContentUrl, new { @class = "single-line" })</div>
+                <div class="editor-field">@Html.EditorFor(b => b.BookDetail.ContentUrl, new { @class = "single-line" })</div>
                 <input type="submit" class="btn-default btn" value="Сохранить" />
                 <button class="btn-default btn" href="@Url.Action("Index","Admin")">Отменить</button>
             }
