--- a/BookStore/Views/Book/GetComment.cshtml
+++ b/BookStore/Views/Book/GetComment.cshtml
@@ -4,11 +4,14 @@
 @foreach (var com in @Model)
 {
     <li>
-        <div class="commenterImage">
-            <a href="@Url.RouteUrl(new {action = "Profile", controller = "User", user = com.UserName})">
-                <img src="@Url.Content(com.UserImgUrl)" />
-            </a>
-        </div>
+        @if (com.UserImgUrl != null)
+        {
+            <div class="commenterImage">
+                <a href="@Url.RouteUrl(new {action = "Profile", controller = "User", user = com.UserName})">
+                    <img src="@Url.Content(com.UserImgUrl)" />
+                </a>
+            </div>
+        }
         <div class="commentText">
             <p class="">@com.ComText</p> <span class="date sub-text">@com.ComDateTime</span>
         </div>
