--- a/BookStore/Views/Admin/EditAuthor.cshtml
+++ b/BookStore/Views/Admin/EditAuthor.cshtml
@@ -29,7 +29,7 @@
                 new { title = "", lastName = @Model.Last_Name, firstName = @Model.First_Name, Id = @Model.Author_ID },
                 new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
         </div>
-        <div class="editor-field">@Html.EditorFor(b => b.AuthorDetail.Image_url, new {@class = "single-line"})</div>
+        <div class="editor-field">@Html.EditorFor(b => b.AuthorDetail.Image_url,new {htmlAttributes= new {@class = "single-line",id="image"}})</div>
     <p>
         <input type="submit" class="btn-default btn" value="Save" />
         @Html.ActionLink("Delete", "DeleteAuthor", new { authId = Model.Author_ID }, new { @class = "btn-default btn" })
