--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                         Html.RenderAction("Genres", "Nav", new { genre = "Комиксы" });
                     }
                 </div>
-
+                <a href="@Url.Action("Suggest", "User")" class="btn">Suggest</a>
             </div>
             <div class="col-md-9 col-lg-9 content">
                 @RenderBody()
